log
Sat 13 Aug 2022 11:37:11 PM UTC: 
 tests:  1|6
total_score: 10/70
7d32712
Sun 14 Aug 2022 12:21:27 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bad9f83
Sun 14 Aug 2022 12:22:12 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
8f1032e
Sun 14 Aug 2022 12:24:18 AM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
2522a14
Sun 14 Aug 2022 12:50:24 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:4: error: expected expression before ‘Vector’
   81 |   *Vector v = (Vector*)calloc(sizeof(Vector));
      |    ^~~~~~
exercises.c:82:3: error: ‘capacidad’ undeclared (first use in this function)
   82 |   capacidad = n;
      |   ^~~~~~~~~
exercises.c:82:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:11: error: ‘v’ undeclared (first use in this function)
   83 |    return v;
      |           ^
exercises.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
   84 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed80dca
